adding 'tuck aside' buttons for arms, with hard-coded joint positions to get the arms out of the way.  Not necessarily appropriate for driving (very wide at the shoulders

--- a/assistive_teleop/vci-www/css/ee-cart.css
+++ b/assistive_teleop/vci-www/css/ee-cart.css
@@ -9,6 +9,12 @@
     padding: 0.25em;
 }
 
+.tuck-side {
+    display:block;
+    margin:0% 10%;
+    padding: 0.25em;
+}
+
 #touchspot-toggle-label {
     display: block;
     margin: 0% 10%;
