adding old tucking server to driving interface

--- a/assistive_teleop/vci-www/css/drive.css
+++ b/assistive_teleop/vci-www/css/drive.css
@@ -2,6 +2,12 @@
     display:none; /*Initialize hidden*/
 }
 
+.tuck-driving {
+    display: block;
+    margin: 0% 10%;
+    padding: 0.25em;
+}
+
 h4.drive-ctrl {
     margin-top:0em;
 }
