adding buttons for forearm cameras

--- a/assistive_teleop/vci-www/css/ee-cart.css
+++ b/assistive_teleop/vci-www/css/ee-cart.css
@@ -15,6 +15,12 @@
     padding: 0.25em;
 }
 
+.arm-cam {
+    display:block;
+    margin:0% 10%;
+    padding: 0.25em;
+}
+
 #touchspot-toggle-label {
     display: block;
     margin: 0% 10%;
