--- a/assistive_teleop/vci-www/css/look.css
+++ b/assistive_teleop/vci-www/css/look.css
@@ -1,3 +1,13 @@
+.look-ctrl {
+    display:none;
+}
+
+.rtbs {
+    display:block;
+    margin:0% 10%;
+    padding: 0.25em;
+}
+
 .map-look {
     position: absolute;
 }
