--- a/assistive_teleop/vci-www/css/ee-cart.css
+++ b/assistive_teleop/vci-www/css/ee-cart.css
@@ -15,8 +15,11 @@
     padding: 0.25em;
 }
 
+.r-arm-ctrl, .l-arm-ctrl{
+    display: none;
+}
+
 .arm-cam {
-    display:block;
     margin:0% 10%;
     padding: 0.25em;
 }
