--- a/assistive_teleop/vci-www/css/look.css
+++ b/assistive_teleop/vci-www/css/look.css
@@ -11,6 +11,12 @@
     background-color: rgba(230,230,230,0.55);
 }
 
+.zoom {
+    display: block;
+    margin: 0% 10%;
+    padding: 0.25em;
+}
+
 .cursor-select{
 /* cursor: url(cursors/select.png) 20 20, auto;*/
     cursor: pointer;    
