--- a/assistive_teleop/vci-www/css/page-wide.css
+++ b/assistive_teleop/vci-www/css/page-wide.css
@@ -71,12 +71,12 @@ body {
     font-size: 1.4em;
     width: 100%;
     text-align: center;
+    margin-bottom: 0.3em;
 }
 #controls h4 {
-    display: none;
     font-size: 1.2em;
     width: 100%;
-    margin-bottom: 0.1em;
+    margin: 0.8em 0.1em 0.1em 0.1em;
     text-align: center;
 }
 .no-cursor {
