asthetic tweaks to runstop, battery, trim some space from left-column

--- a/assistive_teleop/vci-www/css/notifications.css
+++ b/assistive_teleop/vci-www/css/notifications.css
@@ -27,8 +27,7 @@
     position: absolute;
     bottom: 0;
     height: 60px;
-    width: 256px;
-
+    width: 100%;
     background-color: rgba(100, 100, 100, 1);
 }
 
