--- a/assistive_teleop/vci-www/css/battery.css
+++ b/assistive_teleop/vci-www/css/battery.css
@@ -1,11 +1,12 @@
 #battery-status{
     display: inline-block;
     float: right;
-    margin-right: 8px;
-    height: 100%;
+    margin-right: 1%;
+    height: 98%;
     width: 100px;
     background-color: rgba(0,0,0,0);
     position: relative;
+    top:1%;
 }
 
 #battery-status .battery-contact{
@@ -15,6 +16,8 @@
     top: 25%;
     left:0%;
     background-color: yellow; /*Default to warning color. Should be overwritten when state is updated"*/
+    border-top-left-radius: 25%;
+    border-bottom-left-radius: 25%;
 }
 
 #battery-status .battery-main{
@@ -23,6 +26,7 @@
     position: absolute;
     left:15%;
     background-color: yellow; /* Default to warning color. Overwitten on state update."*/
+    border-radius: 6%;
 }
 
 .charge-bolt{
