--- a/assistive_teleop/vci-www/css/page-wide.css
+++ b/assistive_teleop/vci-www/css/page-wide.css
@@ -19,12 +19,20 @@ body {
 }
 
 #left-col {
+    background-color: #555555;
+    background-color: rgba(30,30,30,0.3);
     float: left;
     height: 100%;
     width: 200px;
     position: relative;
     z-index:100;
     left: 0;
+}
+
+#left-col-accordion > div {
+    padding:0;
+    width:99%;
+    height:inherit !important;
 }
 
 #left-col-small {
@@ -50,11 +58,11 @@ body {
     padding: 0.4em 0em;
 }
 
+/*
 #main-menu {
     display: block;
-    width: 100%;
-    background-color: rgba(218, 236, 255, 1.0);
 }
+
 #main-menu h3 {
     display: block;
     font-size: 1.6em;
@@ -62,7 +70,7 @@ body {
     text-align: center;
     margin: 0px;
     padding: 0.4em 0em;
-}
+}*/
 .menu-item {
     display: inline-block;
     height: 40px;
