--- a/assistive_teleop/vci-www/css/undo.css
+++ b/assistive_teleop/vci-www/css/undo.css
@@ -1,14 +1,15 @@
 #undo {
     height:2.5em;
     width:70%;
-    position:relative;
+    position:absolute;
     left:15%;
+    bottom: 60px;
     display: block;
     background: #FF8500;
 }
 
 #undo p {
-    margin: 0.3em; 0em;
+    margin: 0.3em 0em;
 }
 
 @keyframes previewShadow {
