--- a/assistive_teleop/vci-www/css/skin.css
+++ b/assistive_teleop/vci-www/css/skin.css
@@ -4,19 +4,20 @@
     top:0;
     width:100%;
     height:100%;
-/*    display:none;*/
+    display:none;
     z-index:1
 }
 
 .contact-marker{
     background-color:rgba(200,0,0, 0.3);
-/*    display:none;*/
+    display:none;
     position: absolute;
     border-radius:50%;
     height: 70px;
     width: 70px; 
     left: 50%;
     top: 50%;
+    background: radial-gradient(circle at center, rgba(200,0,0,0.67) 0%, rgba(200,0,0,0) 100%);
 }
 
 .edge-contact {
