making menu static on left side of screen for ARAT tests

--- a/assistive_teleop/vci-www/css/page-wide.css
+++ b/assistive_teleop/vci-www/css/page-wide.css
@@ -57,7 +57,8 @@ div.left-col-accordion > .ui-accordion-content {
 #video-main {
     overflow: hidden;
     position: absolute;
-    right: 0;
+    /*right: 0;*/
+    left: 200px;
 }
 
 #viewer-canvas {
